<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@id/meu_metro_main_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:id="@id/frag_sms_denunciation_input_line"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/silver_light_hint">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/frag_sms_denunciation_input_hint_lines"
                        android:imeOptions="actionDone"
                        android:inputType="textNoSuggestions"
                        android:singleLine="true"
                        android:textColor="@android:color/black" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@id/frag_sms_denunciation_button_lines"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:id="@id/frag_sms_denunciation_input_direction_train"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/frag_sms_denunciation_input_hint_direction_train"
                        android:inputType="textNoSuggestions"
                        android:singleLine="true"
                        android:textColor="@android:color/black" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@id/frag_sms_denunciation_button_direction"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:id="@id/frag_sms_denunciation_input_next_station"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/frag_sms_denunciation_input_hint_next_station"
                        android:imeOptions="actionDone"
                        android:inputType="textNoSuggestions"
                        android:singleLine="true"
                        android:textColor="@android:color/black" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@id/frag_sms_denunciation_button_next_station"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent" />

            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@id/frag_sms_denunciation_input_car_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/frag_sms_denunciation_input_hint_car_number"
                    android:imeOptions="actionDone"
                    android:inputType="textNoSuggestions|textCapCharacters"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:textColor="@android:color/black" />

            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:id="@id/frag_sms_denunciation_input_subject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/frag_sms_denunciation_input_hint_subject"
                        android:imeOptions="actionDone"
                        android:inputType="textNoSuggestions"
                        android:singleLine="true"
                        android:textColor="@android:color/black" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@id/frag_sms_denunciation_button_subject"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent" />

            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@id/frag_sms_denunciation_input_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="142">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/frag_sms_denunciation_input_hint_details"
                    android:imeOptions="actionDone"
                    android:inputType="textNoSuggestions|textCapSentences"
                    android:maxLength="142"
                    android:singleLine="true"
                    android:textColor="@android:color/black" />

            </android.support.design.widget.TextInputLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@id/frag_sms_denunciation_radio_button_metro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meu_metro_metro" />

                <RadioButton
                    android:id="@id/frag_sms_denunciation_radio_button_cptm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meu_metro_cptm"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black" />

            </RadioGroup>
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>