<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@id/meu_metro_main_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@id/meu_metro_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            android:elevation="4dp"
            android:minHeight="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="16dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:id="@id/activity_edit_status_input_line"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/silver_light_hint">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/activity_edit_status_input_hint_line"
                        android:textColor="@android:color/black"
                        style="@style/AppEditText"/>

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@id/activity_edit_status_button_line"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:id="@id/activity_edit_status_input_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/silver_light_hint">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/activity_edit_status_input_hint_status"
                        android:textColor="@android:color/black" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@id/activity_edit_status_button_status"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent" />

            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@id/activity_edit_status_input_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/silver_light_hint">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:hint="@string/activity_edit_status_input_hint_description"
                    android:imeOptions="actionDone"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLength="500"
                    android:textColor="@android:color/black" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>